--- a/Hazel_Arts/FAQs.html
+++ b/Hazel_Arts/FAQs.html
@@ -12,6 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./styles/base.css" />
+    <link rel="stylesheet" href="./styles/faqs.css" />
     <title>Hazel Artz | FAQs</title>
   </head>
   <body>
@@ -32,59 +33,72 @@
       >
     </nav>
     <main>
-      <h1>Your not the only one who's asked</h1>
-      <p>Q. Could i pay you in exposure</p>
-      <p>
-        A. No exposure does not pay the bills. You are paying for my skill and
-        knowledge on the product/ subject.
-      </p>
-      <p>Q. What do you provide?</p>
-      <p>
-        A. As a growing artist, I provide concept art (such as references), YCH
-        art work, personal illustrations, Vtube model illustrations, as well as
-        rigging.
-      </p>
-      <p>Q. How do you price your commissions?</p>
-      <p>
-        A. Projects will be charged based on my knowledge on how to do it, my
-        experience, as well as time. Other factors include the complexity of
-        your model/ illustration.
-      </p>
-      <p>Q. What is your artstyle?</p>
-      <p>A. My art style is a manga/ anime style.</p>
-      <p>Q. What is the run time on my commission</p>
-      <p>
-        A. Depends on the project type, how detailed or complex you want your
-        commission to be.
-      </p>
-      <p>Q. Will you do NSFW?</p>
-      <p>
-        A.
-        <span style="color: rgb(217, 1, 1); font-weight: bolder">I do not</span>
-        and
-        <span style="color: rgb(217, 1, 1); font-weight: bolder"
-          >WILL NOT do NSFW</span
-        >
-        illustrations or models. I will redirect you to other artists for that
-        request
-      </p>
-      <p>Q. How do I get in contact with you?</p>
-      <p>
-        A. You can <b>directly</b> contact me at hazelartzs@gmail.com as well as
-        find me at my various social media sites at the bottom of the page for
-        more examples of my work. I will not answer to DM’s on those various
-        platforms.
-      </p>
-
-      <p>Images for the Page 3</p>
-      <img
-        src="./Img/rsz_pexels-dids-3737718.jpg"
-        alt="Waiting for actual Art from Hazel"
-      />
-      <img
-        src="./Img/rsz_pexels-ezequiel-da-silva-2902536.jpg"
-        alt="Waiting for actual Art from Hazel"
-      />
+      <header>
+        <div class="title">
+          <h1>Your not the only one who's asked...</h1>
+        </div>
+        <div class="chibi">
+          <img src="./Img/Small Chibi open.png" alt="Small Chibi Kiyuki" />
+        </div>
+      </header>
+      <div class="qbox">
+        <p>Q. Could i pay you in exposure</p>
+        <p>
+          A. No exposure does not pay the bills. You are paying for my skill and
+          knowledge on the product/ subject.
+        </p>
+      </div>
+      <div class="qbox">
+        <p>Q. What do you provide?</p>
+        <p>
+          A. As a growing artist, I provide concept art (such as references),
+          YCH art work, personal illustrations, Vtube model illustrations, as
+          well as rigging.
+        </p>
+      </div>
+      <div class="qbox">
+        <p>Q. How do you price your commissions?</p>
+        <p>
+          A. Projects will be charged based on my knowledge on how to do it, my
+          experience, as well as time. Other factors include the complexity of
+          your model/ illustration.
+        </p>
+      </div>
+      <div class="qbox">
+        <p>Q. What is your artstyle?</p>
+        <p>A. My art style is a manga/anime style.</p>
+      </div>
+      <div class="qbox">
+        <p>Q. What is the run time on my commission</p>
+        <p>
+          A. Depends on the project type, how detailed or complex you want your
+          commission to be.
+        </p>
+      </div>
+      <div class="qbox">
+        <p>Q. Will you do NSFW?</p>
+        <p>
+          A.
+          <span style="color: rgb(217, 1, 1); font-weight: bolder"
+            >I do not</span
+          >
+          and
+          <span style="color: rgb(217, 1, 1); font-weight: bolder"
+            >WILL NOT do NSFW</span
+          >
+          illustrations or models. I will redirect you to other artists for that
+          request.
+        </p>
+      </div>
+      <div class="qbox">
+        <p>Q. How do I get in contact with you?</p>
+        <p>
+          A. You can <b>directly</b> contact me at hazelartzs@gmail.com as well
+          as find me at my various social media sites at the bottom of the page
+          for more examples of my work. I will not answer to DM's on those
+          various platforms.
+        </p>
+      </div>
     </main>
     <footer>
       <div class="tm">
