page 2 final update

--- a/Hazel_Arts/FAQs.html
+++ b/Hazel_Arts/FAQs.html
@@ -99,6 +99,11 @@
           various platforms.
         </p>
       </div>
+      <img
+        class="background_img"
+        src="./Img/mia.jfif"
+        alt="cool abstract art"
+      />
     </main>
     <footer>
       <div class="tm">
