--- a/Hazel_Arts/404.html
+++ b/Hazel_Arts/404.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/base.css" />
-    <link rel="stylesheet" href="./styles/home.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -13,54 +12,31 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./styles/404.css" />
     <title>Hazel Artz | Home</title>
   </head>
   <body>
     <nav>
       <a href="./index.html">Home</a>
-      <a href="./404.html">Portfolio</a>
+      <a href="#">Portfolio</a>
       <a href="./Drawings.html">Drawings</a>
-      <a href="./404.html">Costumes</a>
-      <a href="./404.html">Dolls</a>
-      <a class="tos" href="./404.html">Terms of Service</a>
+      <a href="#">Costumes</a>
+      <a href="#">Dolls</a>
+      <a class="tos" href="#">Terms of Service</a>
       <a href="./FAQs.html">FAQ's</a>
-      <a class="sign_in" href="./404.html">
+      <a class="sign_in" href="#">
         <i class="fa-solid fa-circle-user"></i>
         <p>Sign In</p></a
       >
     </nav>
-    <main>
-      <article>
-        <div class="bio">
-          <h1>Hello! I'm Koyuki.</h1>
-          <img src="./Img/Small Chibi.png" alt="Chibi Hazel" />
-          <p>
-            I am the owner of HazelArtzs. I am a growing artist who strives to
-            make quality and beautiful concepts/ illustrations along with art
-            dolls from time to time. I do work via commission, and currently
-            they are closed. I'm currently in my second year of college working
-            towards becoming a concept artist. Please feel free to check out my
-            recent works, TOS and my FAQs.
-          </p>
-        </div>
-        <img
-          class="peekaboo"
-          src="./Img/peaking.png"
-          alt="Do not own, Primantis on DeviantArt is Owner! Using as place holder only."
-        />
-        <div class="gallary_box">
-          <h2>Here are some of my Recent works!</h2>
-          <div class="gallary">
-            <img src="./Img/Small Chair.png" alt="Gallary image 1" />
-            <img src="./Img/Small Chair.png" alt="Gallary image 2" />
-            <img src="./Img/Small Chair.png" alt="Gallary image 3" />
-            <img src="./Img/Small Chair.png" alt="Gallary image 4" />
-            <img src="./Img/Small Chair.png" alt="Gallary image 5" />
-            <img src="./Img/Small Chair.png" alt="Gallary image 6" />
-          </div>
-        </div>
-      </article>
-    </main>
+    <div class="uhoh">
+      <h1>404!?</h1>
+      <h1>
+        Looks like this page either isn't finished yet, or doesn't exist
+        anymore...
+      </h1>
+      <h1>Please try again later, or return to the Home Page!</h1>
+    </div>
     <footer>
       <div class="tm">
         <p>Hazel_Artz&copy;</p>
