--- a/Hazel_Arts/FAQs.html
+++ b/Hazel_Arts/FAQs.html
@@ -16,18 +16,15 @@
     <title>Hazel Artz | FAQs</title>
   </head>
   <body>
-    <!-- <a href="./index.html"
-      ><img class="logo" src="./Img/image_50736641.JPG" alt="Hazel_Artz Logo"
-    /></a> -->
     <nav>
       <a href="./index.html">Home</a>
-      <a href="#">Portfolio</a>
+      <a href="./404.html">Portfolio</a>
       <a href="./Drawings.html">Drawings</a>
-      <a href="#">Costumes</a>
-      <a href="#">Dolls</a>
-      <a class="tos" href="#">Terms of Service</a>
+      <a href="./404.html">Costumes</a>
+      <a href="./404.html">Dolls</a>
+      <a class="tos" href="./404.html">Terms of Service</a>
       <a href="./FAQs.html">FAQ's</a>
-      <a class="sign_in" href="#">
+      <a class="sign_in" href="./404.html">
         <i class="fa-solid fa-circle-user"></i>
         <p>Sign In</p></a
       >
